--- a/TimetableServer/TimetableServer.csproj
+++ b/TimetableServer/TimetableServer.csproj
@@ -134,7 +134,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Classroom.cs" />
+    <Compile Include="Models\DayOfTheWeek.cs" />
     <Compile Include="Models\Group.cs" />
+    <Compile Include="Models\BaseSchedule.cs" />
+    <Compile Include="Models\Lesson.cs" />
+    <Compile Include="Models\Teacher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
