--- a/TimetableServer/TimetableServer.csproj
+++ b/TimetableServer/TimetableServer.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Models\Schedules\GroupSchedule.cs" />
     <Compile Include="Models\Lesson.cs" />
     <Compile Include="Models\StudyPlan.cs" />
+    <Compile Include="Models\SubGroup.cs" />
     <Compile Include="Models\Teacher.cs" />
     <Compile Include="Models\Schedules\TeacherSchedule.cs" />
     <Compile Include="Models\Degree.cs" />
