Remade database connection using EF

--- a/TimetableServer/Web.config
+++ b/TimetableServer/Web.config
@@ -111,5 +111,6 @@
   <connectionStrings>
     <remove name="LocalMySqlServer" />
     <add name="LocalMySqlServer" connectionString="" providerName="MySql.Data.MySqlClient" />
+    <add name="TimeTableEntities" connectionString="metadata=res://*/DBModel.csdl|res://*/DBModel.ssdl|res://*/DBModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=serwer1647118.home.pl;user id=19559539_plan;database=19559539_plan;persistsecurityinfo=True;password=PolSl!2017&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
