--- a/TimetableServer/packages.config
+++ b/TimetableServer/packages.config
@@ -17,6 +17,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.4" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Web.Deployment" version="3.6.0" targetFramework="net452" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net452" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net452" />
   <package id="MySql.Fabric" version="6.9.9" targetFramework="net452" />
