--- a/TimetableServer/packages.config
+++ b/TimetableServer/packages.config
@@ -14,13 +14,20 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.4" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Cors" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Web.Deployment" version="3.6.0" targetFramework="net452" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net452" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net452" />
   <package id="MySql.Fabric" version="6.9.9" targetFramework="net452" />
   <package id="MySql.Web" version="6.9.9" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
 </packages>
