Updated database model

--- a/TimetableServer/TimetableServer.csproj
+++ b/TimetableServer/TimetableServer.csproj
@@ -222,6 +222,9 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="account.cs">
+      <DependentUpon>DBModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="BrowserJsonFormatter.cs" />
     <Compile Include="classroom.cs">
