--- a/TimetableServer/Web.config
+++ b/TimetableServer/Web.config
@@ -113,7 +113,7 @@
   <connectionStrings>
     <remove name="LocalMySqlServer" />
     <add name="LocalMySqlServer" connectionString="" providerName="MySql.Data.MySqlClient" />
-    <add name="TimeTableEntities" connectionString="metadata=res://*/DBModel.csdl|res://*/DBModel.ssdl|res://*/DBModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=serwer1647118.home.pl;user id=19559539_plan;database=19559539_plan;persistsecurityinfo=True;password=PolSl!2017&quot;" providerName="System.Data.EntityClient" /><add name="TimeTableEntities" connectionString="metadata=res://*/DBModel.csdl|res://*/DBModel.ssdl|res://*/DBModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=serwer1647118.home.pl;user id=19559539_plan;database=19559539_plan;persistsecurityinfo=True;password=PolSl!2017&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="TimeTableEntities" connectionString="metadata=res://*/DBModel.csdl|res://*/DBModel.ssdl|res://*/DBModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=serwer1647118.home.pl;user id=19559539_plan;password=PolSl!2017;persistsecurityinfo=True;database=19559539_plan&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
