--- a/TimetableServer/TimetableServer.csproj
+++ b/TimetableServer/TimetableServer.csproj
@@ -234,6 +234,7 @@
     <Compile Include="Controlers\CommandController.cs" />
     <Compile Include="Controlers\DegreesControler.cs" />
     <Compile Include="Controlers\GroupsController.cs" />
+    <Compile Include="Controlers\LessonTypesController.cs" />
     <Compile Include="Controlers\ScheduleController.cs" />
     <Compile Include="Controlers\TeacherController.cs" />
     <Compile Include="Controlers\TimeSuggestionController.cs" />
@@ -278,6 +279,7 @@
     <Compile Include="Models\DayOfTheWeek.cs" />
     <Compile Include="Models\Group.cs" />
     <Compile Include="Models\LessonTimeAndDateSetter.cs" />
+    <Compile Include="Models\LessonType.cs" />
     <Compile Include="Models\Schedules\BaseSchedule.cs" />
     <Compile Include="Models\Schedules\GroupSchedule.cs" />
     <Compile Include="Models\Lesson.cs" />
